Task View + Login Layout

--- a/BewareTask/BewareTask.csproj
+++ b/BewareTask/BewareTask.csproj
@@ -229,6 +229,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Register.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogin.cshtml" />
     <Content Include="Views\Task\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
